[package]
authors = ["Crypto Garage", "benny b <ben@bitcoinbay.foundation>"]
description = "Creation and handling of Discrete Log Contracts (DLC)."
edition = "2021"
homepage = "https://github.com/bennyhodl/rust-dlc"
license-file = "../LICENSE"
name = "ddk-manager"
repository = "https://github.com/bennyhodl/rust-dlc/tree/master/dlc-manager"
version = "0.7.6"

[features]
default= ["std"]
std = ["dlc/std", "dlc-messages/std", "dlc-trie/std", "bitcoin/std", "lightning/std"]
fuzztarget = ["rand_chacha"]
parallel = ["dlc-trie/parallel"]
use-serde = ["serde", "dlc/use-serde", "dlc-messages/use-serde", "dlc-trie/use-serde"]

[dependencies]
async-trait = "0.1.50"
bitcoin = { version = "0.32.6", default-features = false }

dlc = { path = "../dlc", features = ["use-serde"] }
dlc-messages = { path = "../dlc-messages", features = [ "use-serde"] }
dlc-trie = { path = "../dlc-trie", features = ["use-serde"] }

futures = "0.3.31"
hex = { package = "hex-conservative", version = "0.1" }
lightning = { version = "0.1.5", default-features = false, features = ["grind_signatures"] }
rand_chacha = {version = "0.3.1", optional = true}
secp256k1-zkp = {version = "0.11.0"}
serde = {version = "1.0", optional = true}
tokio = { version = "1.41.1", features = ["sync"] }
tracing = "0.1.41"

[dev-dependencies]
ddk = { path = "../ddk"}
bitcoincore-rpc = {version = "0.19"}
bitcoincore-rpc-json = {version = "0.19"}
criterion = "0.4.0"
env_logger = "0.9.1"
secp256k1-zkp = {version = "0.11.0", features = ["hashes", "rand", "rand-std", "global-context", "serde"]}
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "test-util", "fs"] }

[[bench]]
harness = false
name = "benchmarks"
