[package]
name = "ddk-manager"
authors = ["Crypto Garage", "benny b <ben@bitcoinbay.foundation>"]
description = "Creation and handling of Discrete Log Contracts (DLC)."
license-file = "../LICENSE"
repository = "https://github.com/bennyhodl/rust-dlc/tree/master/dlc-manager"
homepage.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["ddk-dlc/std", "ddk-messages/std", "ddk-trie/std", "bitcoin/std", "lightning/std"]
fuzztarget = ["rand_chacha"]
parallel = ["ddk-trie/parallel"]
use-serde = ["serde", "ddk-dlc/use-serde", "ddk-messages/use-serde", "ddk-trie/use-serde"]

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }

ddk-dlc = { workspace = true, features = ["use-serde"] }
ddk-messages = { workspace = true, features = ["use-serde"] }
ddk-trie = { workspace = true, features = ["use-serde"] }

futures = { workspace = true }
hex = { package = "hex-conservative", version = "0.1" }
lightning = { workspace = true, features = ["grind_signatures"] }
once_cell = "1.21.3"
rand_chacha = { version = "0.3.1", optional = true }
secp256k1-zkp = { workspace = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
ddk = { workspace = true }
bitcoincore-rpc = { workspace = true }
bitcoincore-rpc-json = { workspace = true }
criterion = "0.8.2"
env_logger = "0.11.10"
secp256k1-zkp = { workspace = true, features = ["hashes", "rand", "rand-std", "global-context", "serde"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "fs"] }
dotenvy = { workspace = true }

[[bench]]
harness = false
name = "benchmarks"
