[package]
name = "ddk-node"
version = "0.0.21"
authors = ["benny b <ben@bitcoinbay.foundation>"]
description = "DDK node to facilitate DLC contracts."
license = "MIT"
repository = "https://github.com/bennyhodl/dlcdevkit"
edition = "2021"

[dependencies]
ddk = { version = "0.0.21", path = "../ddk", features = ["postgres", "kormir", "nostr"] }
ddk-manager = { version = "0.7.7", path = "../ddk-manager", features = ["use-serde"] }
ddk-payouts = { version = "0.0.21", path = "../payouts" }
ddk-dlc = { version = "0.0.21", path = "../dlc", features = ["use-serde"] }
ddk-messages = { version = "0.0.21", path = "../dlc-messages", features = [ "use-serde"] }

bitcoin = { version = "0.32.6", features = ["rand", "serde"] }

anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
hex = "0.4.3"
homedir = "0.3.3"
inquire = "0.7.5"
prost = "0.12.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4.39"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "ddk-node"
path = "./src/bin/node.rs"

[[bin]]
name = "ddk-cli"
path = "./src/bin/cli.rs"

