[package]
name = "ddk-node"
authors = ["benny b <ben@bitcoinbay.foundation>"]
description = "DDK node to facilitate DLC contracts."
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ddk = { workspace = true, features = ["postgres", "kormir", "nostr"] }
ddk-manager = { workspace = true, features = ["std", "use-serde"] }
ddk-payouts = { workspace = true }
ddk-dlc = { workspace = true, features = ["std", "use-serde"] }
ddk-messages = { workspace = true, features = ["std", "use-serde"] }

bitcoin = { workspace = true, features = ["std", "rand", "serde"] }

anyhow = { workspace = true }
clap = { version = "4.5.9", features = ["derive"] }
hex = { workspace = true }
homedir = "0.3.3"
inquire = "0.7.5"
prost = "0.14.3"
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.14.6"
tonic-prost-build = "0.14.6"

[[bin]]
name = "ddk-node"
path = "./src/bin/node.rs"

[[bin]]
name = "ddk-cli"
path = "./src/bin/cli.rs"
