[package]
name = "ddk-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
ddk = { path = "../ddk" }
env_logger = "0.11.3"
log = "0.4.21"
rustyline = "14.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tui = "0.19.0"
