[package]
name = "ddk"
version = "0.0.13"
edition = "2021"
license = "MIT"
description = "application tooling for DLCs 🌊"
documentation = "https://docs.rs/crate/ddk"
repository = "https://github.com/bennyhodl/dlcdevkit"
homepage = "https://dlcdevkit.com"
readme = "../README.md"

[features]
marketplace = ["dep:nostr-rs", "dep:nostr-sdk", "dep:base64"]

# transport features
nostr = ["dep:nostr-rs", "dep:nostr-sdk", "dep:nostr-sqlite", "dep:nostr-relay-pool", "dep:base64"]
lightning = ["dep:lightning-net-tokio"]

# oracle features
kormir = ["dep:reqwest"]
p2pderivatives = ["dep:reqwest"]

# storage features
sled = ["dep:sled"]

[dependencies]
dlc = { version = "0.7.1", features = ["use-serde"] }
ddk-manager = { path = "../ddk-manager", version = "0.7.1", features = ["use-serde"] }
dlc-messages = { version = "0.7.1", features = [ "use-serde"] }
dlc-trie = { version = "0.7.1", features = ["use-serde"] }
# dlc = { path = "../../rust-dlc/dlc", features = ["use-serde"] }
# ddk-manager = { path = "../ddk-manager", features = ["use-serde"] }
# dlc-messages = { path = "../../rust-dlc/dlc-messages", features = [ "use-serde"] }
# dlc-trie = { path = "../../rust-dlc/dlc-trie", features = ["use-serde"] }

bitcoin = { version = "0.32.2", features = ["rand", "serde"] }
bdk_esplora = { version = "0.20.1", features = ["blocking-https", "async-https", "tokio"] }
# bdk_wallet = { version = "1.0.0-beta.5", features = ["bdk_file_store"] }
bdk_wallet = "1.0.0"
bdk_chain = "0.21.1"
anyhow = "1.0.75"
lightning = { version = "0.0.125", default-features = false, features = ["grind_signatures", "std"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.80"
hex = "0.4.3"
crossbeam = "0.8.4"

# storage features
sled = { version = "0.34.7", optional = true }

# Nostr transport dependencies
base64 = { version = "0.13.0" , optional = true }
nostr-rs = { package = "nostr", version = "0.35.0", features = ["std"], optional = true }
nostr-sdk = { version = "0.35.0", optional = true }
nostr-sqlite = { version = "0.35.0", optional = true }
nostr-relay-pool = { version = "0.35.0", optional = true }

# lightning transport
lightning-net-tokio = { version = "0.0.125", optional = true }

# oracle feature
reqwest = { version = "0.12.9", features = ["blocking"], optional = true }
kormir = "0.4.1"
# kormir = { path = "../../kormir/kormir" }
hmac = "0.12.1"
sha2 = "0.10"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
rstest = "0.22.0"
ddk-payouts = { path = "../payouts/" }
bitcoincore-rpc = "0.19.0"

[[example]]
name = "lighnting"
path = "examples/lightning.rs"
required-features = ["lightning", "kormir", "sled"]

[[example]]
name = "nostr"
path = "examples/nostr.rs"
required-features = ["nostr"]