[package]
name = "ddk"
version = "0.0.18"
edition = "2021"
license = "MIT"
description = "application tooling for DLCs 🌊"
documentation = "https://docs.rs/crate/ddk"
repository = "https://github.com/bennyhodl/dlcdevkit"
homepage = "https://dlcdevkit.com"
readme = "../README.md"

[features]
# transport features
nostr = ["dep:nostr-rs", "dep:nostr-sdk", "dep:base64"]
lightning = ["dep:lightning-net-tokio"]

# oracle features
kormir = ["dep:reqwest"]
p2pderivatives = ["dep:reqwest"]
nostr-oracle = ["dep:nostr-database", "nostr", "kormir", "kormir/nostr"]

# storage features
sled = ["dep:sled"]
postgres = ["dep:sqlx", "sqlx/postgres"]

[dependencies]
ddk-manager = { path = "../ddk-manager", version = "0.7.6", features = ["use-serde"] }
dlc = { path = "../dlc", features = ["use-serde"] }
dlc-messages = { path = "../dlc-messages", features = [ "use-serde"] }
dlc-trie = { path = "../dlc-trie", features = ["use-serde"] }

bitcoin = { version = "0.32.6", features = ["rand", "serde"] }
bdk_esplora = { version = "0.22.0", features = ["blocking-https", "async-https", "tokio"] }
bdk_wallet = "2.0.0"
bdk_chain = "0.23.0"
lightning = { version = "0.1.5", default-features = false, features = ["grind_signatures", "std"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.80"
hex = "0.4.3"

# storage features
sled = { version = "0.34.7", optional = true }
sqlx = { version = "0.8.3", optional = true, features = ["runtime-tokio", "time", "bigdecimal", "chrono"] }

# Nostr transport dependencies
base64 = { version = "0.13.0" , optional = true }
nostr-rs = { package = "nostr", version = "0.40.0", features = ["std", "nip04"], optional = true }
nostr-sdk = { version = "0.40.0", optional = true }

# lightning transport
lightning-net-tokio = { version = "0.1.0", optional = true }

# oracle feature
reqwest = { version = "0.12.9", features = ["json"], optional = true }
kormir = { path = "../kormir" }
hmac = "0.12.1"
sha2 = "0.10"
nostr-database = { version = "0.40.0", optional = true }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
ddk-payouts = { path = "../payouts/" }
bitcoincore-rpc = "0.19.0"

[[example]]
name = "lighnting"
path = "examples/lightning.rs"
required-features = ["lightning", "kormir", "sled"]

[[example]]
name = "nostr"
path = "examples/nostr.rs"
required-features = ["nostr"]

[[example]]
name = "postgres"
path = "examples/postgres.rs"
required-features = ["postgres", "lightning", "kormir"]
