[package]
name = "ddk"
description = "application tooling for DLCs 🌊"
documentation = "https://docs.rs/crate/ddk"
homepage = "https://dlcdevkit.com"
readme = "../README.md"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[features]
# transport features
nostr = ["dep:nostr-rs", "dep:nostr-sdk", "dep:base64"]
lightning = ["dep:lightning-net-tokio"]

# oracle features
kormir = ["dep:reqwest"]
p2pderivatives = ["dep:reqwest"]
nostr-oracle = ["dep:nostr-database", "nostr", "kormir", "kormir/nostr"]

# storage features
sled = ["dep:sled"]
postgres = ["dep:sqlx", "sqlx/postgres"]

[dependencies]
ddk-manager = { workspace = true, features = ["std", "use-serde"] }
ddk-dlc = { workspace = true, features = ["std", "use-serde"] }
ddk-messages = { workspace = true, features = ["std", "use-serde"] }
ddk-trie = { workspace = true, features = ["std", "use-serde"] }
kormir = { workspace = true }

bitcoin = { workspace = true, features = ["std", "rand", "serde"] }
bdk_esplora = { version = "0.22.2", default-features = false, features = ["std", "async-https", "tokio"] }
bdk_wallet = "3.0.0"
bdk_chain = "0.23.3"
lightning = { workspace = true, features = ["std", "grind_signatures"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
hex = { workspace = true }

# storage features
sled = { version = "0.34.7", optional = true }
sqlx = { version = "0.8.3", optional = true, default-features = false, features = ["runtime-tokio", "macros", "migrate", "time", "bigdecimal", "chrono"] }

# Nostr transport dependencies
base64 = { version = "0.22.1", optional = true }
nostr-rs = { package = "nostr", version = "0.44.0", features = ["std", "nip04"], optional = true }
nostr-sdk = { version = "0.44.0", optional = true }

# lightning transport
lightning-net-tokio = { version = "0.2.0", optional = true }

# oracle feature
reqwest = { version = "0.13.3", features = ["json"], optional = true }
hmac = "0.13.0"
sha2 = "0.11.0"
nostr-database = { version = "0.44.0", optional = true }
bip39 = "2.2.0"

# zmq feature
zeromq = "0.6.0"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
ddk-payouts = { workspace = true }
bitcoincore-rpc = { workspace = true }
dotenvy = { workspace = true }

[[example]]
name = "lightning"
path = "examples/lightning.rs"
required-features = ["lightning", "kormir", "sled"]

[[example]]
name = "nostr"
path = "examples/nostr.rs"
required-features = ["nostr"]

[[example]]
name = "postgres"
path = "examples/postgres.rs"
required-features = ["postgres", "lightning", "kormir"]
