[package]
authors = ["benny b <ben@bitcoinbay.foundation>", "Crypto Garage"]
description = "Structs and serialization for the Discreet Log Contract (DLC) protocol."
homepage = "https://github.com/bennyhodl/dlcdevkit"
license-file = "../LICENSE"
name = "dlc-messages"
repository = "https://github.com/bennyhodl/dlcdevkit/tree/master/dlc-messages"
version = "0.7.1"
edition = "2015"

[features]
default = ["std"]
std = ["dlc/std", "bitcoin/std", "lightning/std"]
no-std = ["dlc/no-std"]
use-serde = ["serde", "secp256k1-zkp/serde", "bitcoin/serde"]

[dependencies]
bitcoin = { version = "0.32.6", default-features = false }
dlc = { path = "../dlc", default-features = false }
lightning = { version = "0.1.5", default-features = false }
secp256k1-zkp = { version = "0.11.0" }
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
bitcoin = { version = "0.32.6", default-features = false, features = ["serde"] }
dlc-messages = {path = "./", default-features = false, features = ["use-serde"]}
secp256k1-zkp = {version = "0.11.0", features = ["serde", "global-context"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
