[package]
name = "ddk-messages"
authors = ["benny b <ben@bitcoinbay.foundation>", "Crypto Garage"]
description = "Structs and serialization for the Discreet Log Contract (DLC) protocol."
license-file = "../LICENSE"
repository = "https://github.com/bennyhodl/dlcdevkit/tree/master/dlc-messages"
homepage.workspace = true
version.workspace = true
edition = "2015"

[features]
default = ["std"]
std = ["ddk-dlc/std", "bitcoin/std", "lightning/std"]
no-std = ["ddk-dlc/no-std"]
use-serde = ["serde", "secp256k1-zkp/serde", "bitcoin/serde"]

[dependencies]
bitcoin = { workspace = true }
ddk-dlc = { workspace = true }
lightning = { workspace = true }
secp256k1-zkp = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
bitcoin = { workspace = true, features = ["serde"] }
ddk-messages = { path = "./", default-features = false, features = ["use-serde"] }
secp256k1-zkp = { workspace = true, features = ["serde", "global-context"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
