[package]
name = "ddk-trie"
authors = ["benny b <ben@bitcoinbay.foundation>", "Crypto Garage"]
description = "Data structures for storage and retrival of numerical Discreet Log Contracts (DLC)."
license-file = "../LICENSE"
repository = "https://github.com/bennyhodl/dlcdevkit/tree/master/dlc-trie"
homepage.workspace = true
version.workspace = true
edition = "2015"

[features]
default = ["std"]
std = ["ddk-dlc/std", "bitcoin/std"]
no-std = ["ddk-dlc/no-std"]
parallel = ["rayon"]
use-serde = ["serde", "ddk-dlc/use-serde"]

[dependencies]
bitcoin = { workspace = true }
ddk-dlc = { workspace = true }
rayon = { version = "1.5", optional = true }
secp256k1-zkp = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
