[package]
name = "ddk-dlc"
authors = ["benny b <ben@bitcoinbay.foundation>", "Crypto Garage"]
description = "Creation, signing and verification of Discreet Log Contracts (DLC) transactions."
license-file = "../LICENSE"
repository = "https://github.com/bennyhodl/dlcdevkit/tree/master/dlc"
homepage.workspace = true
version.workspace = true
edition = "2015"

[dependencies]
bitcoin = { workspace = true }
miniscript = { version = "12.2", default-features = false }
secp256k1-sys = "0.10.0"
secp256k1-zkp = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
# for benchmarks
unstable = []
default = ["std"]
std = ["bitcoin/std", "miniscript/std", "secp256k1-zkp/rand-std"]
no-std = ["miniscript/no-std"]
use-serde = ["serde", "secp256k1-zkp/serde", "bitcoin/serde"]

[dev-dependencies]
rayon = "1.5"
secp256k1-zkp = { workspace = true, features = ["hashes", "rand", "serde", "global-context"] }
