[package]
name = "kormir"
authors = ["benthecarman <ben@mutinywallet.com>", "benny b <ben@bitcoinbay.foundation>"]
description = "Oracle implementation for DLCs"
license.workspace = true
documentation = "https://docs.rs/kormir"
homepage = "https://github.com/bennyhodl/kormir"
repository = "https://github.com/bennyhodl/kormir"
version.workspace = true
edition.workspace = true

[features]
default = []
nostr = ["dep:nostr", "dep:base64"]

[dependencies]
bitcoin = { workspace = true, features = ["std", "serde"] }
ddk-dlc = { workspace = true, features = ["std", "use-serde"] }
ddk-messages = { workspace = true, features = ["std", "use-serde"] }
lightning = { workspace = true, features = ["std"] }
log = { workspace = true }
nostr = { version = "0.44.0", optional = true }
base64 = { version = "0.22.1", optional = true }
serde = { workspace = true, features = ["std", "derive"] }
secp256k1-zkp = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
