[package]
name = "ddk-payouts"
version = "0.0.16"
authors = ["benny b <ben@bitcoinbay.foundation>"]
description = "Library to build payout functions for DLC contracts."
license = "MIT"
repository = "https://github.com/bennyhodl/dlcdevkit"
edition = "2021"

[dependencies]
ddk-manager = { version = "0.7.5", path = "../ddk-manager", features = ["use-serde"] }
dlc = { path = "../dlc", features = ["use-serde"] }
dlc-messages = { path = "../dlc-messages", features = ["use-serde"] }
dlc-trie = { path = "../dlc-trie", features = ["use-serde"] }

bitcoin = "0.32.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
thiserror = "2.0.12"
