[package]
name = "ddk-payouts"
version = "1.0.0"
authors = ["benny b <ben@bitcoinbay.foundation>"]
description = "Library to build payout functions for DLC contracts."
license = "MIT"
repository = "https://github.com/bennyhodl/dlcdevkit"
edition = "2021"

[dependencies]
ddk-manager = { version = "1.0.0", path = "../ddk-manager", features = ["use-serde"] }
ddk-dlc = { version = "1.0.0", path = "../dlc", features = ["use-serde"] }
ddk-messages = { version = "1.0.0", path = "../dlc-messages", features = ["use-serde"] }
ddk-trie = { version = "1.0.0", path = "../dlc-trie", features = ["use-serde"] }

bitcoin = "0.32.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
thiserror = "2.0.12"
