[package]
name = "ddk-payouts"
authors = ["benny b <ben@bitcoinbay.foundation>"]
description = "Library to build payout functions for DLC contracts."
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ddk-manager = { workspace = true, features = ["std", "use-serde"] }
ddk-dlc = { workspace = true, features = ["std", "use-serde"] }
ddk-messages = { workspace = true, features = ["std", "use-serde"] }
ddk-trie = { workspace = true, features = ["std", "use-serde"] }

bitcoin = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
