[package]
name = "redacted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bdk = { version = "0.28.0", default-features = false, features = ["std", "async-interface", "use-esplora-async", "sqlite-bundled", "keys-bip39"]}
bip39 = "2.0.0"
bitcoin = { version = "0.29.2", features = ["rand", "serde"] }
getrandom = "0.2.11"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
