[package]
name = "ernest-wallet"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bdk = { version = "0.28.0", default-features = false, features = ["std", "use-esplora-blocking", "sqlite-bundled", "keys-bip39"]}
bip39 = "2.0.0"
bitcoin = { version = "0.29.2", features = ["rand", "serde"] }

# dlc = { version = "0.4.0", features = ["use-serde"] }
# dlc-manager = { version = "0.4.0", features = ["use-serde"] }
# dlc-messages = "0.4.0"
# dlc-trie = "0.4.0"
# dlc = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = ["use-serde"] }
# dlc-manager = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = ["use-serde"] }
# dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = [ "use-serde"] }
# dlc-trie = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = ["use-serde"] }
dlc = { git = "https://github.com/benthecarman/rust-dlc", branch = "rand-std", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/benthecarman/rust-dlc", branch = "rand-std", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/benthecarman/rust-dlc", branch = "rand-std", features = [ "use-serde"] }
dlc-trie = { git = "https://github.com/benthecarman/rust-dlc", branch = "rand-std", features = ["use-serde"] }

getrandom = "0.2.11"
homedir = "0.2.1"
lightning = { version = "0.0.118", default-features = false, features = ["grind_signatures", "std"] }
rand = "0.8.5"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sled = "0.34.7"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
electrsd = { version = "0.22.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_23_0"] }
electrum-client = "0.12.0"
