[package]
name = "ernest-wallet"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.13.0"
bdk = { version = "0.28.0", default-features = false, features = ["std", "use-esplora-blocking", "key-value-db"]}
bip39 = "2.0.0"
bitcoin = { version = "0.29.2", features = ["rand", "serde"] }

dlc = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = ["use-serde"] }
dlc-manager = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = ["use-serde"] }
dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = [ "use-serde"] }
dlc-trie = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = ["use-serde"] }
# dlc = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = ["use-serde"] }
# dlc-manager = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = ["use-serde"] }
# dlc-messages = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = [ "use-serde"] }
# dlc-trie = { git = "https://github.com/benthecarman/rust-dlc", branch = "mutiny", features = ["use-serde"] }

getrandom = { version = "0.2.11", features = ["js"] }
homedir = "0.2.1"
lightning = { version = "0.0.118", default-features = false, features = ["grind_signatures", "std"] }
lightning-net-tokio = "0.0.118"
nostr = { version = "0.25.0", features = ["std"] }
nostr-sdk = "0.25.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
sled = "0.34.7"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
electrsd = { version = "0.22.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_23_0"] }
electrum-client = "0.12.0"
futures = "0.3.29"
